refactor : StoreList의 중복코드 제거 및 추상화